dummy project ready

--- a/Jominder/Jominder.csproj
+++ b/Jominder/Jominder.csproj
@@ -201,9 +201,14 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\form.css" />
     <Content Include="Content\ga.js" />
+    <Content Include="Content\jquery-2.1.1.js" />
     <Content Include="Content\jquery.min.js" />
+    <Content Include="Content\main.js" />
     <Content Include="Content\modernizr.custom.79639.js" />
+    <Content Include="Content\modernizr.js" />
+    <Content Include="Content\reset.css" />
     <Content Include="Content\style.css" />
+    <Content Include="Content\stylee.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -233,6 +238,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\css" />
+    <Content Include="Content\csss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -260,7 +266,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\DeveloperHome.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
@@ -283,6 +289,8 @@
     <Content Include="Views\LandOwner\Details.cshtml" />
     <Content Include="Views\LandOwner\Edit.cshtml" />
     <Content Include="Views\LandOwner\Index.cshtml" />
+    <Content Include="Views\Home\Packages.cshtml" />
+    <Content Include="Views\Home\PackegePlan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
