--- a/Jominder/Web.config
+++ b/Jominder/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Jominder-20150814051236.mdf;Initial Catalog=aspnet-Jominder-20150814051236;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=RASKIN\SQLEXPRESS;Initial Catalog=JominderDb;Integrated Security=True" providerName="System.Data.SqlClient"  />
     <add name="JominderDBEntities" connectionString="metadata=res://*/Models.JominderDb.csdl|res://*/Models.JominderDb.ssdl|res://*/Models.JominderDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=RASKIN\SQLEXPRESS;initial catalog=JomindarDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
